# aas-benchmarks

./: README.md  pyproject.toml
data/pyzx/: adder_8.qasm  barenco_tof_10.qasm  barenco_tof_3.qasm  barenco_tof_4.qasm  barenco_tof_5.qasm  csla_mux_3.qasm  csum_mux_9.qasm  cycle_17_3.qasm  gf2^10_mult.qasm  gf2^128_mult.qasm  gf2^16_mult.qasm  gf2^256_mult.qasm  gf2^32_mult.qasm  gf2^4_mult.qasm  gf2^5_mult.qasm  gf2^64_mult.qasm  gf2^6_mult.qasm  gf2^7_mult.qasm  gf2^8_mult.qasm  gf2^9_mult.qasm  grover_5.qasm  ham15-high.qasm  ham15-low.qasm  ham15-med.qasm  hwb10.qasm  hwb11.qasm  hwb12.qasm  hwb6.qasm  hwb8.qasm  mod5_4.qasm  mod_adder_1024.qasm  mod_adder_1048576.qasm  mod_mult_55.qasm  mod_red_21.qasm  qcla_adder_10.qasm  qcla_com_7.qasm  qcla_mod_7.qasm  qft_4.qasm  rc_adder_6.qasm  tof_10.qasm  (+4 more)
src/phase_poly_benchmarks/: benchmarks.py  cli.py  read_qasm.py  result.py
